[tool.poetry]
name = "entropylab"
version = "0.1.4"
description = ""
license = "BSD-3-Clause"
authors = [
    "Guy Kerem <guy@quantum-machines.co>",
    "Ilan Mitnikov <ilan@quantum-machines.co>",
    "Gal Winer <gal@quantum-machines.co>",
    "Tal Shani <tal@quantum-machines.co>",
]
packages = [{ include = "entropylab" }]
exclude = ["**/tests/**"]
readme = "README.md"
homepage = "https://github.com/entropy-lab/entropy"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.19"
panel = "^0.14.4"
bokeh = "^2.4.3"
param = "^1.13.0"
dill = "^0.3.7"
pandas = "^2.0.3"
numpy = "^1.25.2"
jsonpickle = "^3.0.1"
graphviz = "^0.20.1"
networkx = "^3.1"
matplotlib = "^3.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
flake8-bugbear = "^23.7.10"
pytest-repeat = "^0.9.1"
pytest-cov = "^4.1.0"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
